apps/base/qbittorrent/deployment.yaml
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.14.0/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: linuxserver-common
            optional: false
        image: ghcr.io/linuxserver/qbittorrent:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          tcpSocket:
            port: 8080
          timeoutSeconds: 3
        name: qbittorrent
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          tcpSocket:
            port: 8080
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 500m
            memory: 2000Mi
        volumeMounts:
        - mountPath: /media/Transmission
          name: media
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
      - name: media
        nfs:
          path: /media/Transmission
          server: 192.168.1.188
