apps/base/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    app:  qbittorrent
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
