apps/base/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    hilmargustafs.com/group: internal
spec:
  defaultBackend:
    service:
      name: qbittorrent
      port:
        name: http
  ingressClassName: tailscale
  tls:
    - hosts:
        - qbittorrent
